sponsor page bugfix, and session field alignement

--- a/themes/drupalaton_theme/sass/_drupalaton.scss
+++ b/themes/drupalaton_theme/sass/_drupalaton.scss
@@ -389,6 +389,9 @@ body.not-front {
     margin-bottom: 10px;
   }
 }
+.field-name-field-session-type .field-items {
+  margin: 25px 0 10px 0;
+}
 .panel-pane  {
 
   h2 {
@@ -453,6 +456,16 @@ body.page-sponsors{
     
     &:last-child {
       border-bottom: 0;
+    }
+  }
+  .global .views-row {
+    border-bottom: 1px solid $tabletd;
+    margin: 15px 0;
+    padding-bottom: 20px;
+
+    &:last-child {
+      border-bottom: 0;
+      padding-bottom: 0;
     }
   }
 }
